tests/samples/positive/types/ownership_move.ax
module ownership_move;

noncopy struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn consume(owner: Owner) -> i32 {
    return owner.value;
}

fn forward(owner: Owner) -> Owner {
    return move(owner);
}

fn main() -> i32 {
    let first: Owner = make_owner(3);
    let second: Owner = Owner { value: 4 };
    let moved: Owner = move(second);
    let forwarded: Owner = forward(move(first));

    var slot: Owner = make_owner(10);
    let consumed: i32 = consume(move(slot));
    slot = make_owner(20);

    let total: i32 = consume(move(moved)) + consume(move(forwarded)) + consumed + consume(move(slot));
    if total == 37 {
        return 0;
    }
    return total;
}
